<?xml version="1.0"?>
<package format="2">
  <name>static_transform_mux</name>
  <version>1.1.0</version>
  <description>A helper node that makes sure everybody knows about all static transforms, even if they are published by multiple publishers.</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/static_transform_mux</url>
  
  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

</package>
